decompose project (#368)
* decompose project

* adds workflows

* fix pom error

* fix build issue

* fix pom error

* fix build issue

* fix build issue

* removes jooq and entities module