@@ -5,17 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>poc-spring-boot-rest</artifactId>
-        <groupId>com.example.poc</groupId>
-        <version>0.4.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.5.6</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>poc-spring-boot-rest-webflux</artifactId>
     <name>Spring Boot Rest Webflux</name>
 
     <properties>
+        <java.version>17</java.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 
+        <testcontainers.version>1.16.2</testcontainers.version>
         <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
         <maven-pmd-plugin.version>3.13.0</maven-pmd-plugin.version>
         <dependency-check-maven.version>6.4.1</dependency-check-maven.version>
@@ -135,7 +138,6 @@
                 <configuration>
                     <source>${java.version}</source> <!-- depending on your project -->
                     <target>${java.version}</target> <!-- depending on your project -->
-                    <compilerArgs>--enable-preview</compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
